--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "main": "src/index.ts",
   "license": "MIT",
+  "repository": "https://github.com/Dgarc359/mastodon-post-feed.git",
   "dependencies": {
     "axios": "^1.4.0",
     "typescript": "^5.1.6"
@@ -30,5 +31,8 @@
   "resolutions": {
     "**/@types/react": "^18.2.15",
     "**/@types/node": "^20.4.2"
-  }
+  },
+  "files": [
+    "src/**/*"
+  ]
 }
