--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "scripts": {
+    "build": "yarn tsc",
+    "prepare": "yarn build"
+  },
   "name": "mastodon-post-feed",
   "description": "A React component to display a timeline of a post and its replies from a Mastodon instance",
-  "version": "0.1.1",
-  "main": "src/index.ts",
+  "version": "0.1.2",
+  "main": "lib/index.js",
   "license": "MIT",
   "repository": "https://github.com/Dgarc359/mastodon-post-feed.git",
   "dependencies": {
