--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "mastodon-post-feed",
   "description": "A React component to display a timeline of a post and its replies from a Mastodon instance",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "lib/index.js",
   "license": "MIT",
   "repository": "https://github.com/Dgarc359/mastodon-post-feed.git",
@@ -37,6 +37,6 @@
     "**/@types/node": "^20.4.2"
   },
   "files": [
-    "src/**/*"
+    "lib/**/*"
   ]
 }
