embeds video player, needs further work

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "MIT",
   "repository": "https://github.com/Dgarc359/mastodon-post-feed.git",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
     "typescript": "^5.1.6"
   },
